packages/svelte/test/compiler-errors/samples/component-slot-duplicate-error/main.svelte
<script>
	import Nested from './irrelevant';
</script>

<Nested>
	<p slot="foo">{value}</p>
	<p slot="foo">{value}</p>
</Nested>